--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
             <button id="prev" class="btn btn-secondary"><i class="fa-solid fa-backward-fast"></i></button>
             <button id="play-pause" class="btn btn-primary"><i class="fa-solid fa-play"></i></button>
             <button id="next" class="btn btn-secondary"><i class="fa-solid fa-forward-fast"></i></button>
-            <button id="shuffle" class="btn btn-secondary"><i class="fa-solid fa-shuffle"></i></button>
             <button id="repeat" class="btn btn-secondary"><i class="fa-solid fa-repeat"></i></button>
-            
-            <!-- Ícone de volume -->
             <button id="volume-icon" class="btn btn-secondary"><i class="fa-solid fa-volume-up"></i></button>
-            
-            <!-- Controle de volume -->
+            <a href="https://open.spotify.com/playlist/0A8v5L7CeBxaIB2rpaJrA0?si=3157a5f70b434892" id="spotify" class="btn btn-spotify" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-spotify"></i>
+            </a>
             <div id="volume-control-container" class="d-none">
                 <input id="volume-control" type="range" min="0" max="1" step="0.05" value="0.15">
             </div>
