--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <img id="random-photo" src="" alt="Nossa Foto" class="img-fluid anaejv">
         </div>
         <div class="date-container dating-time">
-            <p><strong id="dating-time"></strong><br>juntinhos ❤</p>
+            <p><strong id="dating-time"></strong><br>juntinhos 🌹</p>
         </div>
         <div class="text-container">
-            <h3 class="text-fofinho">Para você se lembrar de quantos dias se passaram da minha melhor decisão... E que a gente possa voltar aqui e ver que os dias só aumentaram. Eu te amo eternamente minha princesinha ❤️</h3>
+            <h3 class="text-fofinho">Para você se lembrar de quantos dias se passaram da minha melhor decisão... E que a gente possa voltar aqui e ver que os dias só aumentaram. Eu te amo eternamente minha princesinha!! ❤️</h3>
         </div>
         <div class="gif-container row">
             <div class="tenor-gif-embed col-4">
